<resources>
    <string name="app_name">MusicPlayer</string>

    <!--Placeholders-->
    <string name="duration_placeholder" translatable="false">1:06:27</string>
    <string name="title_placeholder" translatable="false">MARUV &amp; BOOSIN - Drunk Groove (Kolya Funk &amp; Mephisto Radio mix)</string>
    <string name="artist_placeholder" translatable="false">Dj Mephisto Berlin</string>

    <!--Image content descriptions-->
    <string name="content_description_song_image">Song image</string>
    <string name="content_description_previous_song">Previous song</string>
    <string name="content_description_play_pause">Play/Pause</string>
    <string name="content_description_next_song">Next song</string>
    <string name="content_description_like">Like</string>

</resources>
