<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/FullInfoActivityRootLinearLayout"
    tools:context="ua.com.zzz.davimuka.musicplayer.activities.FullInfoActivity">

    <RelativeLayout
        android:id="@+id/songInfoRelativeLayout"
        style="@style/FullInfoActivitySongInfoRelativeLayout">

        <TextView
            android:id="@+id/fullInfoTitleTextView"
            style="@style/FullInfoActivityTitleTextView"
            android:text="@string/title_placeholder" />

        <TextView
            android:id="@+id/fullInfoArtistTextView"
            style="@style/FullInfoActivityArtistTextView"
            android:text="@string/artist_placeholder" />

    </RelativeLayout>

    <ImageView
        android:id="@+id/fullInfoImageImageView"
        style="@style/FullInfoActivityImageImageView"
        android:contentDescription="@string/content_description_song_image"
        android:src="@drawable/song_1_full_image" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/fullInfoButtonsConstraintLayout"
        style="@style/FullInfoActivityButtonsConstraintLayout">

        <ImageView
            android:id="@+id/fullInfoPreviousImageView"
            style="@style/FullInfoActivityButtonsImageViews"
            android:contentDescription="@string/content_description_previous_song"
            android:src="@drawable/ic_skip_previous"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="parent"
            app:layout_constraintRight_toLeftOf="@id/fullInfoPlayPauseImageView"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/fullInfoPlayPauseImageView"
            style="@style/FullInfoActivityButtonsImageViews"
            android:contentDescription="@string/content_description_play_pause"
            android:src="@drawable/ic_play_arrow"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/fullInfoPreviousImageView"
            app:layout_constraintRight_toLeftOf="@id/fullInfoNextImageView"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/fullInfoNextImageView"
            style="@style/FullInfoActivityButtonsImageViews"
            android:contentDescription="@string/content_description_next_song"
            android:src="@drawable/ic_skip_next"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/fullInfoPlayPauseImageView"
            app:layout_constraintRight_toLeftOf="@id/fullInfoLikeImageView"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/fullInfoLikeImageView"
            style="@style/FullInfoActivityButtonsImageViews"
            android:contentDescription="@string/content_description_like"
            android:src="@drawable/ic_action_heart"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/fullInfoNextImageView"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </android.support.constraint.ConstraintLayout>

</LinearLayout>
